2010-10-13 Ingo Renner  <ingo@typo3.org>

	* Uncommented a test for aiff file meta data extractions, marked as incomplete though, currently not working...
	* Added a configuration check status for the reports module
	* Fixed DAM compatibility: created vpixels and hpixels fields even for text file meta data
	* Disabled language tests in meta data extraction services for now, seems to be brocken in Tika 0.8-trunk

2010-09-27 Ingo Renner  <ingo@typo3.org>

	* Disabled the configuration report for now, it's not fully implemented yet

2010-04-23 Ingo Renner  <ingo@typo3.org>

	* Fixed a bug where using Solr and having no path set for Tika results in an exception

2010-03-09 Ingo Renner  <ingo@typo3.org>

	* Increased version to 0.7.0

	* Added an option to use a Solr server for meta data extraction instead of Tika
	* Added a test for text extraction from odf files

2010-03-08 Ingo Renner  <ingo@typo3.org>

	* Increased version to 0.6.0

	* Added an option to use a Solr server for text extraction instead of Tika

2010-02-25 Ingo Renner  <ingo@typo3.org>

	* Changed the variable's name used to configure the Tika jar path

2010-02-24 Ingo Renner  <ingo@typo3.org>

	* Added the language detection service
	* Increased version to 0.5.0, set status to beta
	* Added meta data extraction support for several formats

2010-02-23 Ingo Renner  <ingo@typo3.org>

	* Fixed an UTF8 issue with the text extraction service when using local Tika
	* Added support for text extraction from OOo 1/ .sxw documents
	* Added the meta data extraction service

2010-02-22 Ingo Renner  <ingo@typo3.org>

	* Added the text extraction service

2009-12-26 Ingo Renner  <ingo@typo3.org>

	* initial code generated with kickstarter